syntax = "proto3";

package shipment;

// option go_package = "github.com/protodev/microservice/shipment;shipment";

service ShippingService {
  rpc CreateShipment(Shipment) returns (Response) {}

  rpc GetShipments(GetRequest) returns (Response) {}
}

message Shipment {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  repeated Container containers = 4;
  string vessel_id = 5;
}

message Container {
  string id = 1;
  string customer_id = 2;
  string origin = 3;
  string user_id = 4;
}

message GetRequest {}

message Response {
  bool created = 1;
  Shipment shipment = 2;

  // Add a pluralised shipment to our generic response message
  repeated Shipment shipments = 3;
}
